--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 <main>
                                      <!-- theme switcher numbers -->
     <div id="theme-label-container">
-      <span id="theme-label">
-        <p>1</p>
-        <p>2</p>            
-        <p>3</p>
-      </span>
+      <div id="theme-label">
+        <label for="theme">123</label>
+      </div>
     </div>
 
     <div id="header">
       <h1>calc</h1>
       <p>theme</p>                      <!-- theme switcher -->
+      
       <input type="range" name="theme" id="theme" min="0" max="100" step="50" value="1" onchange="changeTheme()">
     </div>
                                          <!-- results box -->
@@ -59,6 +58,6 @@
     </div>
 
 </main>
-<script type="text/javascript" src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
